--- a/react-todo/src/ListItems.css
+++ b/react-todo/src/ListItems.css
@@ -9,5 +9,17 @@
 
 .list p{
     padding: 10px;
+    position: relative;
 
+}
+
+.list p span {
+    right: 10px;
+    position: absolute;
+    cursor: pointer;
+}
+
+.faicons {
+    margin: 0 5px;
+    font-size: 15px;
 }
