--- a/react-todo/src/ListItems.css
+++ b/react-todo/src/ListItems.css
@@ -23,3 +23,15 @@
     margin: 0 5px;
     font-size: 15px;
 }
+
+.list p input {
+    background-color: transparent;
+    border: 0;
+    color: aliceblue;
+    font-size: 18px;
+
+}
+
+.list p input ::focus{
+    outline: none;
+}
